--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,86 +1,3 @@
-:root {
-    --red: #EB5757;
-    --white: #ffffff;
-    --blue: #082F63;
-    --black: #000000;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    width: 100vw;
-    overflow-x: hidden;
-    background-color: #082F63;
-    text-align: center;
-}
-
-/* Text Colors */
-.red {
-    color: var(--red);
-}
-
-.white {
-    color: var(--white);
-}
-
-.blue {
-    color: var(--blue);
-}
-
-.black {
-    color: var(--black);
-}
-
-/* Background colors */
-.bg-white {
-    background-color: var(--white);
-}
-
-/* Layout styles */
-.flex {
-    display: flex;
-}
-
-.center-center {
-    justify-content: center;
-    align-items: center;
-}
-
-.start-center {
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.start-start {
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-
-.wrap {
-    flex-wrap: wrap;
-}
-
-.w-80 {
-    width: 80%;
-}
-
-/* Common section styles */
-.pad-y {
-    padding: 5% initial;
-}
-
-.pad-t {
-    padding-top: 5%;
-}
-
-.mar-t {
-    margin-top: 5%;
-}
-
-.m-auto {
-    margin: auto;
+.serif {
+    font-family: 'Crimson Text', serif;
 }
