--- a/components/pages/_styles/About.module.css
+++ b/components/pages/_styles/About.module.css
@@ -1,25 +1,9 @@
-.hero {
-    flex-direction: row;
-    height: 90vh;
-}
-
 .hero img {
-    width: 60%;
-    margin-left: 20%;
+    width: 80%;
+    float: right;
 }
 
-.hero h1 {
-    position: absolute;
-    left: 40%;
-    top: 15%;
+.skills-first-row {
+    padding: 5% 0;
+    text-align: center;
 }
-
-.hero div {
-    text-align: left;
-    margin-left: 5%;
-    margin-top: 70px;
-}
-
-/* .hero p {
-    width: 65%;
-} */
