--- a/components/pages/_styles/Home.module.css
+++ b/components/pages/_styles/Home.module.css
@@ -11,5 +11,11 @@
 .project-card img {
     width: 90%;
     height: auto;
-    margin: 20px 0;
+    margin: 40px 0;
+    opacity: 0.5;
+    transition: 200ms all ease;
+}
+
+.project-card img:hover {
+    opacity: 1;
 }
