--- a/components/pages/_styles/Home.module.css
+++ b/components/pages/_styles/Home.module.css
@@ -11,11 +11,20 @@
 .project-card img {
     width: 90%;
     height: auto;
-    margin: 40px 0;
+    margin: 20px 0;
     opacity: 0.5;
     transition: 200ms all ease;
 }
 
 .project-card img:hover {
     opacity: 1;
+}
+
+@media (max-width: 540px) {
+    .main-content {
+        padding-left: 0;
+    }
+    .project-card img {
+        width: 100%;
+    }
 }
